# har-pilot

./: .gitignore  Cargo.toml  lazyvim.har  readme.md  v0.md
.github/workflows/: ethicalcheck.yml  release.yml  tests.yml
src/: har.rs  lib.rs  main.rs
tests/: integration_test.rs
