[package]
name = "har-party"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
indicatif = "0.16"