[package]
name = "har-pilot"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
indicatif = "0.16"
rusqlite = "0.28"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }